# structural_optimization

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  run_gui.py
.github/workflows/: ci.yml  integration.yml
configs/: elevator_linkage.yaml  legacy_single_case.yaml
configs/presets/: README.md  additive.yaml  coarse_proxy.yaml  docker_mumps.yaml  final_highfidelity.yaml  multiload.yaml
docs/: add_material_boxes.md  applicability.md  benchmarks.md  choosing_an_optimizer.md  docker_image.md  levelset_stuck_analysis.md  levelset_stuck_replay_real.py  levelset_stuck_repro.py  optimizer_switching.md  roadmap_2026.md  simp_spike.md  topology_sota_2026.md  troubleshooting.md
examples/cantilever/: README.md  cantilever_0000.rad  cantilever_0001.rad
oropt/: __init__.py  _render.py  animate.py  beso.py  config.py  controller.py  d3plot.py  deck.py  demo.py  fastmode.py  growthmesh.py  hca.py  keepout.py  levelset.py  loop.py  manufacturing.py  mesh.py  mfg_verify.py  mfse.py  queue_runner.py  report.py  results.py  run.py  runner.py  saip.py  sanity.py  simp.py  smoothing.py  status.py  tdsa.py  tobs.py  validate.py
oropt/gui/: __init__.py  app.py  boxes.py  cases.py  colors.py  growthprep.py  history.py  queue_store.py  runstate.py  slots.py  views.py
scripts/: benchmark_optimizers.py  make_demo_case.py  sweep.py
tests/: conftest.py  test_adaptive_weights.py  test_animate.py  test_benchmark.py  test_beso.py  test_config.py  test_controller.py  test_converged_checkpoint.py  test_d3plot.py  test_deck.py  test_demo.py  test_demo_wiring.py  test_determinism.py  test_diverge.py  test_docker_backend.py  test_fastmode.py  test_fresh_reset.py  test_group_guard.py  test_growth.py  test_growth_deck_region.py  test_growthmesh.py  test_gui_cases.py  test_gui_colors.py  test_gui_config_switch.py  test_gui_growthprep.py  test_gui_history.py  test_gui_monitor.py  test_gui_queue.py  test_gui_reanimate.py  test_gui_resume.py  test_gui_run_settings.py  test_gui_runstate.py  test_gui_save.py  test_gui_slots.py  test_gui_views.py  test_hca.py  test_keepout.py  test_levelset.py  test_levelset_leak.py  test_loop.py  (+26 more)
tests/integration/: test_real_solver.py
tests/integration/fixtures/: smoke_0000.rad  smoke_0001.rad
