[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oropt"
version = "0.1.0"
description = "OpenRadioss-coupled topology optimization via BESO (element removal driven by /ANIM/ELEM/ENER)"
requires-python = ">=3.10"
authors = [{ name = "Minh Quang Pham" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pyvista>=0.43",   # VTK-backed reader for anim_to_vtk output + topology export/viz
    "matplotlib>=3.7",
    "pillow>=9.0",     # GIF encoding for the post-run topology-evolution animation
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gui = ["streamlit>=1.30", "stpyvista>=0.0.10"]
dev = ["pytest>=7.0", "ruff>=0.6"]

[project.scripts]
oropt = "oropt.run:main"
oropt-animate = "oropt.animate:main"

[tool.setuptools]
packages = ["oropt", "oropt.gui"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100          # the codebase favours long, descriptive comment lines
extend-exclude = [".venv"]

[tool.ruff.lint]
# Pyflakes (F) catches the real drift — unused imports/vars, undefined names,
# f-strings without placeholders — plus the safe pycodestyle error classes.
# E501 (line length) is intentionally off: the explanatory comments run long.
select = ["E4", "E7", "E9", "F", "W"]
ignore = [
    "E741",   # short axis names (l/x/y) read fine in this maths code
    "E702",   # compact paired statements (a = ...; a[0] = ...) are idiomatic here
]
